# proxy-panel

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.sh  package.json  start.ps1  start.sh
.claude/: launch.json
.github/workflows/: release.yml
crates/panel-auth/: Cargo.toml
crates/panel-auth/src/: error.rs  lib.rs  password.rs  session.rs  user.rs
crates/panel-core/: Cargo.toml
crates/panel-core-singbox/: Cargo.toml
crates/panel-core-singbox/src/: lib.rs
crates/panel-core-xray/: Cargo.toml
crates/panel-core-xray/src/: lib.rs
crates/panel-core/src/: lib.rs
crates/panel-domain/: Cargo.toml
crates/panel-domain/src/: cdn_endpoint.rs  chain_proxy.rs  error.rs  lib.rs  listener.rs  node.rs  notification.rs  plan.rs  proxy_user.rs  stats.rs
crates/panel-node/: Cargo.toml
crates/panel-node/src/: dry_run.rs  error.rs  lib.rs  ssh.rs
crates/panel-notify/: Cargo.toml
crates/panel-notify/src/: lib.rs
crates/panel-persistence/: Cargo.toml  build.rs
crates/panel-persistence/migrations/postgres/: 20260527000001_init.sql  20260527000002_sessions.sql  20260527000003_listeners.sql  20260527000004_plans_users.sql  20260527000005_nodes.sql  20260527000006_tasks.sql  20260527000007_audit_backups.sql  20260528000008_cdn_chain.sql  20260528000009_notifications.sql  20260529000010_stats.sql  20260601000013_provision_task.sql  20260601000014_plan_extras.sql
crates/panel-persistence/migrations/sqlite/: 20260527000001_init.sql  20260527000002_sessions.sql  20260527000003_listeners.sql  20260527000004_plans_users.sql  20260527000005_nodes.sql  20260527000006_tasks.sql  20260527000007_audit_backups.sql  20260528000008_cdn_chain.sql  20260528000009_notifications.sql  20260529000010_stats.sql  20260531000011_ssh_hostkey.sql  20260531000012_node_ssh_creds.sql  20260601000013_provision_task.sql  20260601000014_plan_extras.sql
crates/panel-persistence/src/: lib.rs
crates/panel-server/: Cargo.toml
crates/panel-server/src/: adapters.rs  audit.rs  auth.rs  backups.rs  bootstrap.rs  cdn_endpoints.rs  chain_proxies.rs  config.rs  error.rs  listeners.rs  main.rs  nodes.rs  notifications.rs  plans.rs  proxy_users.rs  spa.rs  state.rs  subscription.rs  subscription_page.css  subscription_page.rs  tasks.rs  traffic.rs  utils.rs
crates/panel-task/: Cargo.toml
crates/panel-task/src/: executor.rs  lib.rs  model.rs  repo.rs  worker.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  styles.css
web/src/components/: AppShell.tsx  Modal.tsx  SearchSelect.tsx  ThemeSwitch.tsx
web/src/lib/: api.ts  auth.tsx  i18n.tsx  theme.ts
web/src/pages/: Account.tsx  Audit.tsx  Backups.tsx  CdnEndpoints.tsx  ChainProxies.tsx  Dashboard.tsx  Listeners.tsx  Login.tsx  Nodes.tsx  Notifications.tsx  Plans.tsx  ProxyUsers.tsx  Tasks.tsx  Traffic.tsx
