[package]
name = "panel-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
russh.workspace = true
serde_json.workspace = true
panel-domain.workspace = true
