[package]
name = "panel-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "panel-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
rand.workspace = true
hex.workspace = true
async-trait.workspace = true
base64.workspace = true
url.workspace = true
panel-persistence.workspace = true
panel-auth.workspace = true
panel-domain.workspace = true
panel-core.workspace = true
panel-core-xray.workspace = true
panel-core-singbox.workspace = true
panel-node.workspace = true
panel-task.workspace = true
panel-notify.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
qrcode.workspace = true
x25519-dalek.workspace = true
